split lines early

avoids that we OOM before we handle that

BUG: 479073